# spec/api-spec.yaml
@@ -34,7 +34,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Song"
       security:
-        - authorizer: []
+        - authorizer: [ ]
       x-amazon-apigateway-auth:
         type: AWS_IAM
       x-amazon-apigateway-integration:
@@ -61,7 +61,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Song"
       security:
-        - authorizer: []
+        - authorizer: [ ]
       x-amazon-apigateway-request-validator: validate_request
       x-amazon-apigateway-auth:
         type: AWS_IAM
@@ -91,7 +91,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Empty"
       security:
-        - authorizer: []
+        - authorizer: [ ]
       x-amazon-apigateway-auth:
         type: AWS_IAM
       x-amazon-apigateway-integration:
@@ -129,15 +129,16 @@ components:
           type: string
     Empty:
       type: object
-  securityDefinitions:
-    authorizer:
-      type: apiKey
-      name: Authorization
-      in: header
-      x-amazon-apigateway-authtype: 'custom'
-      x-amazon-apigateway-authorizer:
-        type: token
-        authorizerUri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:musiclibrary-${StageName}-AuthorizerFunction/invocations
+
+securityDefinitions:
+  authorizer:
+    type: apiKey
+    name: Authorization
+    in: header
+    x-amazon-apigateway-authtype: 'custom'
+    x-amazon-apigateway-authorizer:
+      type: token
+      authorizerUri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:musiclibrary-develop-AuthorizerFunction/invocations
 
 
 x-amazon-apigateway-request-validators:
